cargo_check_wasm_output.txt
cargo :     Checking web-sys v0.3.83
At line:1 char:1
+ cargo check --target wasm32-unknown-unknown 
2>&1 | Out-File -FilePath ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~
    + CategoryInfo          : NotSpecified: ( 
       Checking web-sys v0.3.83:String) [],   
  RemoteException
    + FullyQualifiedErrorId : NativeCommandEr 
   ror
 
    Checking chrono v0.4.43
   Compiling surrealdb-core v2.4.1
   Compiling surrealdb v2.4.1
    Checking sync_wrapper v1.0.2
    Checking revision v0.11.0
    Checking object_store v0.12.4
    Checking reactive_graph v0.2.12
    Checking gloo-utils v0.2.0
    Checking wasm-streams v0.4.2
    Checking trice v0.4.0
    Checking rexie v0.4.2
    Checking ws_stream_wasm v0.7.5
    Checking reqwest v0.13.1
    Checking dmp v0.2.3
    Checking gloo-net v0.6.0
    Checking indxdb v0.6.0
    Checking server_fn v0.8.9
    Checking reactive_stores v0.3.1
    Checking tachys v0.2.11
    Checking leptos_dom v0.8.7
    Checking leptos_server v0.8.6
    Checking leptos v0.8.15
    Checking leptos_router v0.8.11
    Checking leptos_meta v0.8.5
    Checking glassbox v0.1.0 (D:\AI and  
datascience projects\Project 8\glassbox)
warning: unused imports: `DateTime` and `Utc`
 --> src\model\video.rs:3:14
  |
3 | use chrono::{DateTime, Utc};
  |              ^^^^^^^^  ^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

error[E0560]: struct `video::Video` has no 
field named `related_id`
  --> src\API\youtube.rs:64:9
   |
64 |         related_id,
   |         ^^^^^^^^^^ unknown field
   |
help: a field with a similar name exists
   |
64 |         related_ids,
   |                   +

For more information about this error, try 
`rustc --explain E0560`.
warning: `glassbox` (bin "glassbox") 
generated 1 warning
error: could not compile `glassbox` (bin 
"glassbox") due to 1 previous error; 1 
warning emitted
